<resources>
    <string name="app_name">Github Finder</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="title_theme">Theme</string>
    <string name="username">Username</string>
    <string name="searchbar_hint">Cari user</string>
    <string name="name">Nama</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>